feat: adding the transactions endpoint to Wallet Financial Service
